--- a/SkillSync/application/templates/landing.html
+++ b/SkillSync/application/templates/landing.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skill Sync</title>
-    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}" />
     <style>
       /* styles.css */
       .container {
@@ -48,10 +50,10 @@
   </head>
   <body class="dark-mode">
     <div class="container">
-      <img src="./images/logo.png" alt="Skill Sync Logo" class="logo" />
+      <img src="{% static 'images/logo.png' %}" alt="Skill Sync Logo" class="logo" />
       <h1 class="title">Skill Sync</h1>
       <p class="subtitle">"Goals, one skill at a time"</p>
-      <a class="login-button" href="login.html">Login</a>
+      <a class="login-button" href="{% url 'registerPage' %}">Login</a>
     </div>
   </body>
 </html>
