Register Created But Both Have Some Issues

--- a/SkillSync/application/templates/landing.html
+++ b/SkillSync/application/templates/landing.html
@@ -53,7 +53,7 @@
       <img src="{% static 'images/logo.png' %}" alt="Skill Sync Logo" class="logo" />
       <h1 class="title">Skill Sync</h1>
       <p class="subtitle">"Goals, one skill at a time"</p>
-      <a class="login-button" href="{% url 'registerPage' %}">Login</a>
+      <a class="login-button" href="{% url 'loginPage' %}">Login</a>
     </div>
   </body>
 </html>
