--- a/SkillSync/application/templates/register.html
+++ b/SkillSync/application/templates/register.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/b593ca79be.js" crossorigin="anonymous"></script>
   </head>
   <body class="loginBody dark-mode">
-    <a href="landing.html"><img src="{% static 'images/logo.png' %}" alt="Logo" /></a>
+    <a href="{% url 'landingPage' %}"><img src="{% static 'images/logo.png' %}" alt="Logo" /></a>
     <h1 class="title">Skill Sync</h1>
     <main class="form-container">
       <h2>Register</h2>
@@ -29,8 +29,8 @@
             <input type="password" id="password2" name="password2" placeholder="Verify Password" required />
           </div>
         <button type="submit" class="F1-button"><a href="{% url 'landingPage' %}">Register</a></button> 
-        <button class="F2-button">Login</button>
       </form>
+      <button class="F2-button"><a href="{% url 'loginPage' %}">Already have an account? Login</a></button>
     </main>
 
     <footer>
