--- a/SkillSync/application/static/css/stylesheet.css
+++ b/SkillSync/application/static/css/stylesheet.css
@@ -1,5 +1,5 @@
 :root {
-  --white: #f8f8f8;
+  --white: #ffffff;
   --lightGrey: #a3a3a3;
   --midGrey: #7c7c7c;
   --darkGrey: #333;
@@ -9,61 +9,108 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: var(--white);
+  background-color: #e6e6e6;
   color: var(--darkGrey);
-  height: 100vh;
   overflow-y: auto;
   transition: background-color 0.3s, color 0.3s;
+}
+
+/* Dark mode */
+.dark-mode {
+  background-color: var(--darkGrey);
+  color: var(--white);
 }
 
 main {
   background-color: inherit;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  margin: 2rem auto;
+  width: 75px;
+  height: auto;
+}
+
+form {
+  width: 80%;
+}
+
+/* LOGIN PAGE */
+
+.loginBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  font-size: 80px;
+  font-weight: bold;
+  margin: 0 0 60px 0;
+}
+
 /* Header and Footer Styling */
 header,
 footer {
+  display: flex;
   position: fixed;
   align-items: center;
+  justify-content: flex-end;
   background-color: transparent;
   z-index: 10;
   width: 100%;
+  height: 0;
 }
 
 header img {
   margin: 0;
-  width: 50px;
+  width: 40px;
+}
+
+header > div {
+  display: flex;
+}
+
+header .profile-img {
+  width: 1.75vw;
+  height: 1.75vw;
+  border: 1px solid var(--black);
+  padding: 1px;
 }
 
 header > *,
+header i,
 footer i {
   color: inherit;
-  font-size: 1.75vw;
   cursor: pointer;
-  transition: opacity 0.3s, font-size 0.3s, color 0.3s;
+  transition: filter 0.3s ease;
   z-index: 10;
-  position: fixed;
+  position: relative;
+}
+
+header i,
+footer i {
+  font-size: 1.75vw;
 }
 
 header > * {
-  top: 1.636vh;
+  top: 2.636vh;
+  margin: 0.75vw;
 }
 
 header > a:first-of-type {
-  left: 1.567vw;
+  margin-right: auto;
 }
 
-header > a:nth-child(2) {
-  right: 4.31vw;
-}
-
-header div {
-  right: 1.332vw;
-}
-
-header > *:hover,
-footer i:hover {
-  color: var(--midGrey);
+header img:hover,
+i:hover {
+  filter: invert(25%);
 }
 
 footer {
@@ -71,22 +118,21 @@ footer {
 }
 
 footer i {
-  font-size: 1.75vw;
-  bottom: 1.636vh;
-  right: 1.567vw;
+  bottom: 2.636vh;
+  margin: 0.75vw;
 }
 
 footer .fa-expand {
-  right: 4.31vw;
   display: none;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
+  top: 2vw;
   right: 0;
   background-color: var(--white);
-  min-width: 150px;
+  min-width: 125px;
   padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 10;
@@ -102,16 +148,11 @@ footer .fa-expand {
   font-weight: 600;
   font-size: 20px;
   border-radius: 10px;
+  text-align: center;
 }
 
 .dropdown-content a:hover {
   background-color: var(--midGrey);
-}
-
-/* Dark mode */
-.dark-mode {
-  background-color: var(--darkGrey);
-  color: var(--white);
 }
 
 .questionnaire.form-container {
@@ -126,9 +167,12 @@ footer .fa-expand {
   padding-bottom: 30px;
 }
 
-.questionnaire.form-container button {
+.questionnaire.form-container button,
+.settings-form button {
   background-color: #4d9447;
 }
+
+/* MAIN */
 
 /* Tree Diagram */
 .tree-container {
@@ -257,10 +301,6 @@ footer .fa-expand {
   background-color: inherit;
 }
 
-.show {
-  display: block;
-}
-
 .info-panel h3 {
   margin: 0;
   font-size: 24px;
@@ -300,35 +340,21 @@ footer .fa-expand {
   display: none;
 }
 
-/* login page */
-.loginBody {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.title {
-  font-size: 80px;
-  font-weight: bold;
-  margin: 0 0 60px 0;
-}
-
-form {
-  width: 80%;
-  max-width: 500px;
-  margin: 0 auto;
-}
-
 .form-container {
-  width: 40%; /* Ensure it uses the full width of its container */
+  width: 40%;
   max-width: 800px;
-  height: 40%;
-  max-height: 600px;
+  height: auto;
+  min-height: 400px;
   padding: 2rem;
   border-radius: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
   background-color: inherit;
   z-index: 10;
+}
+
+.form-container form {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .form-container h2 {
@@ -339,7 +365,9 @@ form {
 }
 
 .form-group {
+  margin: 0 auto;
   margin-bottom: 1rem;
+  width: 80%;
 }
 
 .form-group label {
@@ -347,14 +375,15 @@ form {
   margin-bottom: 0.5rem;
 }
 
-.form-group input {
-  width: 100%; /* Make input fields take the full width of the container */
+.form-group input,
+.form-group textarea {
+  width: 100%;
   padding: 0.75rem;
   border: 1px solid var(--lightGrey);
   border-radius: 4px;
   font-size: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
-  box-sizing: border-box; /* Ensure padding doesn't overflow the width */
+  box-sizing: border-box;
 }
 
 .form-group input:focus {
@@ -362,7 +391,8 @@ form {
   border-color: var(--darkGrey);
 }
 
-.form-container button {
+.F1-button,
+.F2-button {
   padding: 0.75rem;
   border: none;
   border-radius: 4px;
@@ -375,13 +405,13 @@ form {
 }
 
 .F1-button {
-  width: 60%; /* Full width for login button */
-  margin: 0 auto 1rem auto; /* Spacing between buttons */
+  width: 60%;
+  margin: 0 auto 1rem auto;
 }
 
 .F2-button {
-  width: 40%; /* Smaller width for the register button */
-  margin: 0 auto; /* Center the register button */
+  width: 40%;
+  margin: 0 auto;
 }
 
 .F1-button:hover,
@@ -389,9 +419,195 @@ form {
   background-color: var(--midGrey);
 }
 
-img {
-  display: block;
-  margin: 2rem auto; /* Center the logo and add margin below it */
-  width: 75px; /* Adjust the width of the logo as needed */
-  height: auto;
+/* ACCOUNT */
+
+.account-page {
+  width: 100%;
+  height: 100%;
+}
+
+.sidebar {
+  width: 10vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  justify-content: center;
+}
+
+.sidebar button {
+  background-color: inherit;
+  color: inherit;
+  padding: 16px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  font-size: 16px;
+  box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.5);
+}
+
+.sidebar button:hover {
+  filter: invert(25%);
+}
+
+.content {
+  width: 82vw;
+  padding: 0 3vw;
+  position: absolute;
+  left: 10vw;
+}
+
+.tabcontent {
+  display: none;
+  padding: 20px;
+  width: fit-content;
+}
+
+.tabcontent h2 {
+  margin-bottom: 15px;
+}
+
+.tabcontent p {
+  font-size: 16px;
+}
+
+.settings-form .form-group,
+.settings-form button {
+  margin: 0 0 1rem 0;
+}
+
+.settings-form textarea {
+  width: 40vw;
+  height: 20vh;
+  resize: none;
+}
+
+/* PROFILE */
+
+.profile-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.profile-section h1 {
+  font-size: 48px;
+  font-weight: 700;
+  width: 70%;
+}
+
+.main-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+
+.main-section > div {
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  border-radius: 10px;
+}
+
+.main-section > div:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
+}
+
+.overview {
+  width: 60%;
+}
+
+.contact {
+  width: 30%;
+}
+
+.overview h2,
+.contact h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.overview p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.contact p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.cards-section {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  justify-items: center;
+}
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  border-radius: 12px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: box-shadow 0.3s ease;
+  margin: 10px;
+}
+
+.card:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
+}
+
+.card h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.card button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  background-color: inherit;
+  color: inherit;
+}
+
+.card button:hover {
+  background-color: var(--midGrey);
+}
+
+.profile-container {
+  padding: 40px 80px;
+}
+
+.profile-img {
+  width: 100px;
+  height: 100px;
+  background-color: var(--darkGrey);
+  border-radius: 50%;
+  border: 3px solid var(--black);
+  padding: 5px;
+  object-fit: cover;
+}
+
+/* At bottom to increase priority */
+
+.selected {
+  filter: invert(25%) !important;
+}
+
+.show {
+  display: block !important;
 }
