--- a/SkillSync/application/templates/main.html
+++ b/SkillSync/application/templates/main.html
@@ -1,16 +1,18 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
-    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}" />
     <script src="https://kit.fontawesome.com/b593ca79be.js" crossorigin="anonymous"></script>
   </head>
   <body class="dark-mode">
     <header>
-      <a href="landing.html"><img src="./images/logo.png" alt="Logo" /></a>
-      <a href="profile.html" class="user-icon"><i class="fa-solid fa-user"></i></a>
+      <a href="{% url 'landingPage' %}"><img src="{% static 'images/logo.png' %}" alt="Logo" /></a>
+      <a href="{% url 'profile' %}" class="user-icon"><i class="fa-solid fa-user"></i></a>
       <div class="dropdown">
         <i class="fa-solid fa-bars" onclick="toggleDropdown()"></i>
         <div class="dropdown-content" id="dropdownMenu">
