--- a/SkillSync/application/templates/profile.html
+++ b/SkillSync/application/templates/profile.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Page</title>
-    <link rel="stylesheet" href="css/stylesheet.css" />
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}" />
     <script src="https://kit.fontawesome.com/b593ca79be.js" crossorigin="anonymous"></script>
     <style>
       main {
@@ -125,26 +127,26 @@
   </head>
 
   <body class="dark-mode">
-    <header>
-      <a href="landing.html"><img src="./images/logo.png" alt="Logo" /></a>
-      <a href="profile.html" class="user-icon"><i class="fa-solid fa-user"></i></a>
-      <div class="dropdown">
-        <i class="fa-solid fa-bars" onclick="toggleDropdown()"></i>
-        <div class="dropdown-content" id="dropdownMenu">
-          <a href="#">Account</a>
-          <a href="main.html">Skill Tree</a>
-          <a href="#">Skill List</a>
-          <a href="login.html">Sign Out</a>
-        </div>
+<header>
+    <a href="{% url 'landingPage' %}"><img src="{% static 'images/logo.png' %}" alt="Logo" /></a>
+    <a href="{% url 'profile' %}" class="user-icon"><i class="fa-solid fa-user"></i></a>
+    <div class="dropdown">
+      <i class="fa-solid fa-bars" onclick="toggleDropdown()"></i>
+      <div class="dropdown-content" id="dropdownMenu">
+        <a href="#">Account</a>
+        <a href="main.html">Skill Tree</a>
+        <a href="#">Skill List</a>
+        <a href="login.html">Sign Out</a>
       </div>
-    </header>
+    </div>
+  </header>
 
     <main>
       <div class="profile-container">
         <!-- Header Section -->
         <div class="profile-header">
           <h1>First Last</h1>
-          <img class="profile-img" src="./images/default user.png" alt="profile picture" />
+          <img class="profile-img" src="{% static 'images/default user.png' %}" alt="profile picture" />
         </div>
 
         <!-- Overview and Contact Section -->
