Login Form Action

--- a/SkillSync/application/templates/login.html
+++ b/SkillSync/application/templates/login.html
@@ -14,7 +14,7 @@
     <h1 class="title">SkillSync</h1>
     <main class="form-container">
       <h2>Login</h2>
-      <form action="{% url 'dashboardPage' %}" method="POST">
+      <form action="{% url 'landingPage' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
           <label for="email">Email</label>
