--- a/SkillSync/application/templates/account.html
+++ b/SkillSync/application/templates/account.html
@@ -1,26 +1,16 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account</title>
-    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}" />
     <script src="https://kit.fontawesome.com/b593ca79be.js" crossorigin="anonymous"></script>
   </head>
   <body class="dark-mode">
-    <header>
-      <a href="dashboard.html"><img src="./images/logo.png" alt="Logo" /></a>
-      <a href="profile.html" class="user-icon"> <img class="profile-img icon" src="./images/default user.png" alt="profile picture" /> </a>
-      <div class="dropdown">
-        <i class="fa-solid fa-bars" onclick="toggleDropdown()"></i>
-        <div class="dropdown-content" id="dropdownMenu">
-          <a href="account.html">Account</a>
-          <a href="dashboard.html">Skill Tree</a>
-          <!-- <a href="#">Skill List</a> -->
-          <a href="login.html">Sign Out</a>
-        </div>
-      </div>
-    </header>
+    {% include 'header.html' %}
 
     <main class="account-page">
       <div class="sidebar">
@@ -107,7 +97,7 @@
       <i class="fa-regular fa-lightbulb" onclick="toggleDarkMode()" title="Toggle Dark Mode"></i>
     </footer>
 
-    <script src="./js/account.js" defer></script>
-    <script src="./js/icon.js" defer></script>
+    <script src="{% static 'js/account.js' %}" defer></script>
+    <script src="{% static 'js/icon.js' %}" defer></script>
   </body>
 </html>
