Login/Register/Logout
Renamed main.html to tree.html
Renamed login.html to login_register.html
Deleted login.js
Setup main.html as a base template
Dashboard extends main.html
Fixed most main.js to only run on tree page

--- a/SkillSync/application/templates/header.html
+++ b/SkillSync/application/templates/header.html
@@ -8,7 +8,7 @@
       <a href="{% url 'accountPage' %}">Account</a>
       <a href="{% url 'dashboardPage' %}">Skill Tree</a>
       <!-- <a href="#">Skill List</a> -->
-      <a href="{% url 'loginPage' %}">Sign Out</a>
+      <a href="{% url 'logout' %}">Sign Out</a>
     </div>
   </div>
 </header>
