--- a/SkillSync/application/templates/dashboard.html
+++ b/SkillSync/application/templates/dashboard.html
@@ -1,55 +1,40 @@
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}" />
-    <script src="https://kit.fontawesome.com/b593ca79be.js" crossorigin="anonymous"></script>
-  </head>
-  <body class="dark-mode">
-    {% include 'header.html' %}
-
-    <main style="display: flex; height: 100vh; align-items: center">
-      <div class="sidebar">
-        <button class="tablinks selected">Overview</button>
-        <button class="tablinks">Edit Account</button>
-        <button class="tablinks">Notifications</button>
-        <button class="tablinks">Sign Out</button>
+{% extends 'main.html' %} {% block content%}
+<main style="display: flex; height: 100vh; align-items: center">
+  <div class="sidebar">
+    <button class="tablinks selected">Overview</button>
+    <button class="tablinks">Edit Account</button>
+    <button class="tablinks">Notifications</button>
+    <button class="tablinks">Sign Out</button>
+  </div>
+  <div class="content">
+    <section class="cards-section">
+      <div class="card">
+        <h3>CCI Skill Tree</h3>
+        <p>Skill Tree representing the skills needed to succeed in Computer Science.</p>
+        <button><a href="{% url 'treePage' %}">View Tree</a></button>
       </div>
-      <div class="content">
-        <section class="cards-section">
-          <div class="card">
-            <h3>CCI Skill Tree</h3>
-            <p>Skill Tree representing the skills needed to succeed in Computer Science.</p>
-            <button><a href="{% url 'mainPage' %}">View Tree</a></button>
-          </div>
 
-          <div class="card">
-            <h3>Entrepreneur Skill Tree</h3>
-            <p>Skill Tree representing the skills needed to strengthen and improve on your entrepreneurship.</p>
-            <button><a href="{% url 'mainPage' %}">View Tree</a></button>
-          </div>
-
-          <div class="card">
-            <h3>Internship Skill Tree</h3>
-            <p>Skill Tree representing the skills needed to apply and engage in applying for internships.</p>
-            <button><a href="{% url 'mainPage' %}">View Tree</a></button>
-          </div>
-
-          <div class="card" style="box-shadow: 0 0 8px #4d9447">
-            <h3>Create New Tree</h3>
-            <p>Want to track more progress? Create another!</p>
-            <button style="background-color: #4d9447"><a href="{% url 'mainPage' %}">Create Tree</a></button>
-          </div>
-        </section>
+      <div class="card">
+        <h3>Entrepreneur Skill Tree</h3>
+        <p>Skill Tree representing the skills needed to strengthen and improve on your entrepreneurship.</p>
+        <button><a href="{% url 'treePage' %}">View Tree</a></button>
       </div>
-    </main>
-    <footer>
-      <i class="fa-regular fa-lightbulb" onclick="toggleDarkMode()" title="Toggle Dark Mode"></i>
-    </footer>
-    <script src="{% static 'js/icon.js' %}" defer></script>
-  </body>
-</html>
+
+      <div class="card">
+        <h3>Internship Skill Tree</h3>
+        <p>Skill Tree representing the skills needed to apply and engage in applying for internships.</p>
+        <button><a href="{% url 'treePage' %}">View Tree</a></button>
+      </div>
+
+      <div class="card" style="box-shadow: 0 0 8px #4d9447">
+        <h3>Create New Tree</h3>
+        <p>Want to track more progress? Create another!</p>
+        <button style="background-color: #4d9447"><a href="{% url 'treePage' %}">Create Tree</a></button>
+      </div>
+    </section>
+  </div>
+</main>
+<footer>
+  <i class="fa-regular fa-lightbulb" onclick="toggleDarkMode()" title="Toggle Dark Mode"></i>
+</footer>
+{% endblock content%}
