--- a/SkillSync/application/templates/tree.html
+++ b/SkillSync/application/templates/tree.html
@@ -107,4 +107,6 @@
   <i class="fa-solid fa-expand" onclick="resetScale()" title="Reset Zoom"></i>
   <i class="fa-regular fa-lightbulb" onclick="toggleDarkMode()" title="Toggle Dark Mode"></i>
 </footer>
+
+<script src="{% static 'js/tree.js' %}" defer></script>
 {% endblock content%}
