--- a/SkillSync/application/static/css/stylesheet.css
+++ b/SkillSync/application/static/css/stylesheet.css
@@ -610,6 +610,11 @@ footer .fa-expand {
 }
 
 /* DashboardPage */
+.dashboard-main {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+}
 
 .cards-section {
   display: grid;
