--- a/SkillSync/application/templates/dashboard.html
+++ b/SkillSync/application/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %} {% block content%} {% include 'header.html' %}
-<main style="display: flex; height: 100vh; align-items: center">
+<main class="dashboard-main">
   <div class="sidebar">
     <button class="tablinks selected">Overview</button>
     <button class="tablinks">Edit Account</button>
