--- a/SkillSync/application/templates/tree_form.html
+++ b/SkillSync/application/templates/tree_form.html
@@ -1,16 +1,15 @@
 {% extends 'main.html' %} {% load static %} {% block content%} {% include 'header.html' %}
-<main>
-  <div class="form-container questionnaire">
-    <h2>Questionnaire</h2>
-    <form action="login" method="POST">
-      <div class="form-group">
-        <label for="answer">What is your future career?</label>
-        <input type="text" id="answer" name="answer" placeholder="Software Engineer" required />
-      </div>
-      <button type="submit" class="F2-button">Next</button>
-    </form>
-  </div>
-</main>
+<div class="form-container questionnaire">
+  <h2>Question</h2>
+  <form action="" method="POST">
+    {% csrf_token %}
+    <div class="form-group">
+      <label for="answer">What is your future career?</label>
+      <input type="text" id="answer" name="answer" placeholder="Software Engineer" required />
+    </div>
+    <button type="submit" class="F2-button">Submit</button>
+  </form>
+</div>
 
 <footer>
   <i class="fa-solid fa-expand" onclick="resetScale()" title="Reset Zoom"></i>
