--- a/SkillSync/application/templates/recursivetree.html
+++ b/SkillSync/application/templates/recursivetree.html
@@ -1,17 +1,12 @@
-{% load custom_tags %}
-<div class="tree-container">
-    <ul class="tree">
-        {% for key, value in jsonData.items %}
-            <li>
-                {% if key == "title" %}
-                    {{ value }}  <!-- Display current title -->
-                {% elif value|is_dict %}
-                    <!-- Recursively render nested dictionary -->
+{% load static %} {% load custom_tags %}
+<ul class="tree">
+    {% for key, value in jsonData.items %}
+            {% if key == "title" %}
+                <button>{{value}}</button>
+            {% elif value|is_dict %}
+                <ul>
                     {% renderNestedDict value %}
-                {% else %}
-                    <!-- Handle non-dictionary values -->
-                {% endif %}
-            </li>
-        {% endfor %}
-    </ul>
-</div>
+                </ul>
+            {% endif %}
+    {% endfor %}
+</ul>
